Fix Java 11 export issue, fix service client builder Checkstyle rule